--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -1,3 +1,1 @@
-# messages.fr.yaml
-
-Invalid credentials. : Votre email ou votre mot de passe est invalide !
+Invalid credentials.: Votre email ou votre mot de passe est invalide 
